# easy_lang

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
src/: base.rs  check_auth_api_middleware.rs  check_auth_middleware.rs  check_db_api_middleware.rs  check_db_view_middleware.rs  check_user_api_middleware.rs  check_user_middleware.rs  cookie.rs  generate_anki.rs  globals.rs  google_module.rs  gpt_module.rs  jwt.rs  main.rs  models.rs  no_cache_middleware.rs  render_temps.rs  translate_module.rs
src/controllers/: api_auth_controller.rs  api_controller.rs  api_service_controller.rs  api_user_controller.rs  mod.rs  object_of_controller.rs  settings_controller.rs  view_controller.rs  view_userspace_controller.rs  view_userstart_controller.rs
